# mcp-types

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  cabal.project  generate-and-format-mcp-types.sh  mcp-gen.cabal  mcp.cabal  readme  readme.md
.github/workflows/: ci.yml  haskell.yml
app/: Main.hs
mcp-test/: mcp-test.cabal
mcp-test/test/: Main.hs
mcp-types/: Utils.hs  mcp-types.cabal
mcp-types-gen/: mcp-types-gen.cabal
mcp-types-gen/generator/: Gen.hs  GenName.hs  GenTH.hs  Main.hs  Types.hs  Utils.hs
mcp-types/Network/Protocol/MCP/Types/: Annotations.hs  AudioContent.hs  BlobResourceContents.hs  CallToolRequest.hs  CallToolResult.hs  CancelledNotification.hs  ClientCapabilities.hs  ClientNotification.hs  ClientRequest.hs  ClientResult.hs  CompleteRequest.hs  CompleteResult.hs  CreateMessageRequest.hs  CreateMessageResult.hs  Cursor.hs  EmbeddedResource.hs  EmptyResult.hs  GetPromptRequest.hs  GetPromptResult.hs  ImageContent.hs  Implementation.hs  InitializeRequest.hs  InitializeResult.hs  InitializedNotification.hs  JSONRPCBatchRequest.hs  JSONRPCBatchResponse.hs  JSONRPCError.hs  JSONRPCMessage.hs  JSONRPCNotification.hs  JSONRPCRequest.hs  JSONRPCResponse.hs  ListPromptsRequest.hs  ListPromptsResult.hs  ListResourceTemplatesRequest.hs  ListResourceTemplatesResult.hs  ListResourcesRequest.hs  ListResourcesResult.hs  ListRootsRequest.hs  ListRootsResult.hs  ListToolsRequest.hs  (+43 more)
mcp-types/src/: Utils.hs
mcp-types/src/Network/Protocol/MCP/Types/: Annotations.hs  AudioContent.hs  BlobResourceContents.hs  CallToolRequest.hs  CallToolResult.hs  CancelledNotification.hs  ClientCapabilities.hs  ClientNotification.hs  ClientRequest.hs  ClientResult.hs  CompleteRequest.hs  CompleteResult.hs  CreateMessageRequest.hs  CreateMessageResult.hs  Cursor.hs  EmbeddedResource.hs  EmptyResult.hs  GetPromptRequest.hs  GetPromptResult.hs  ImageContent.hs  Implementation.hs  InitializeRequest.hs  InitializeResult.hs  InitializedNotification.hs  JSONRPCBatchRequest.hs  JSONRPCBatchResponse.hs  JSONRPCError.hs  JSONRPCMessage.hs  JSONRPCNotification.hs  JSONRPCRequest.hs  JSONRPCResponse.hs  ListPromptsRequest.hs  ListPromptsResult.hs  ListResourceTemplatesRequest.hs  ListResourceTemplatesResult.hs  ListResourcesRequest.hs  ListResourcesResult.hs  ListRootsRequest.hs  ListRootsResult.hs  ListToolsRequest.hs  (+43 more)
mcp-types/test/: Main.hs  Props.hs  Utils.hs
meta/: schema.json
src/: Gen.hs  GenTH.hs  Utils.hs
test/: Main.hs
