cabal-version:      3.12
name:               mcp-test
version:            0.1.0.0
synopsis:           "MCP test"
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrick
maintainer:         patrickwalesss@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

test-suite mcp-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.7 && <5
        , mcp-types
        , tasty
        , aeson
        , tasty-hunit
        , stm
        , async
        , process
